Add MaxCor/MinCor (minimum and maximum correction allowances).  Update constants and instructions.  Update gitignore directives. -SparkDustJoe

--- a/UpdateLocalTimeNTP.csproj
+++ b/UpdateLocalTimeNTP.csproj
@@ -57,6 +57,7 @@
     <Content Include="masterserverlist.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitignore" />
     <None Include="app.manifest">
       <SubType>Designer</SubType>
     </None>
